--- a/css/styleeligibility.css
+++ b/css/styleeligibility.css
@@ -59,7 +59,7 @@ h6 {
 }
 
 p {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
 }
 
 strong {
@@ -383,7 +383,7 @@ a.btn_1.rounded,
   margin: 20px 0 15px 0;
   font-weight: 700;
   font-size: 22px;
-  line-height: 30px;
+  line-height: 1.2;
   letter-spacing: 0px;
   color: #FBFBFB;
   text-align: center;
@@ -392,7 +392,7 @@ a.btn_1.rounded,
   margin: 20px 0 15px 0;
   font-weight: 400;
   font-size: 18px;
-  line-height: 30px;
+  line-height: 1.2;
   letter-spacing: 0px;
   color: #FBFBFB;
   text-align: left;
@@ -407,7 +407,7 @@ a.btn_1.rounded,
 .content-left-wrapper p {
   font-weight: 400;
   font-size: 14px;
-  line-height: 22px;
+  line-height: 1.2;
   letter-spacing: 0px;
   color: #FBFBFB;
   text-align: left;
@@ -1128,7 +1128,7 @@ ul.contacts_info li:last-child {
 .form-group.terms {
   padding: 12px 0 0 0;
 }
-.form-group i {
+.form-group big_italic {
   font-size: 18px;
   font-size: 1.125rem;
   position: absolute;
