--- a/css/styleeligibility.css
+++ b/css/styleeligibility.css
@@ -517,7 +517,12 @@ a.btn_1.rounded,
     display: none;
   }
 }
-/*============================================================================================*/
+@media (max-height: 650px) {
+    .copy {
+      bottom:0;
+    }
+  }
+  /*============================================================================================*/
 /* 2.  CONTENT */
 /*============================================================================================*/
 /*-------- 2.1 Wizard --------*/
